// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testes de Snapshot Snapshots para estruturas de dados deve corresponder ao snapshot do objeto de usuário transformado 1`] = `
{
  "contactInfo": {
    "email": "joao@exemplo.com",
    "phoneNumber": "N/A",
  },
  "displayName": "JOÃO SILVA",
  "metadata": {
    "lastLogin": "2023-01-01T00:00:00.000Z",
    "role": "Usuário",
  },
  "permissions": [
    "read",
    "write",
  ],
}
`;

exports[`Testes de Snapshot renderNotificationsList deve renderizar mensagem de erro para dados inválidos: notificações como string 1`] = `"<div class="error">Formato de notificações inválido</div>"`;

exports[`Testes de Snapshot renderNotificationsList deve renderizar mensagem de erro para dados inválidos: notificações nulas 1`] = `"<div class="error">Formato de notificações inválido</div>"`;

exports[`Testes de Snapshot renderNotificationsList deve renderizar mensagem quando não há notificações 1`] = `"<div class="empty-list">Não há notificações</div>"`;

exports[`Testes de Snapshot renderNotificationsList deve renderizar uma lista de notificações 1`] = `
"
    <ul class="notifications-list">
      
      <li class="notification-item unread" data-id="1">
        <div class="notification-item__icon notification-item__icon--info">
          <svg><!-- Ícone de Info --></svg>
        </div>
        <div class="notification-item__content">
          <p>Nova mensagem recebida</p>
        </div>
        <div class="notification-item__actions">
          <button class="btn btn--small">Marcar como lida</button>
        </div>
      </li>
    
      <li class="notification-item read" data-id="2">
        <div class="notification-item__icon notification-item__icon--success">
          <svg><!-- Ícone de Sucesso --></svg>
        </div>
        <div class="notification-item__content">
          <p>Pagamento confirmado</p>
        </div>
        <div class="notification-item__actions">
          <button class="btn btn--small">Marcar como não lida</button>
        </div>
      </li>
    
      <li class="notification-item unread" data-id="3">
        <div class="notification-item__icon notification-item__icon--warning">
          <svg><!-- Ícone de Aviso --></svg>
        </div>
        <div class="notification-item__content">
          <p>Atualização disponível</p>
        </div>
        <div class="notification-item__actions">
          <button class="btn btn--small">Marcar como lida</button>
        </div>
      </li>
    
    </ul>
  "
`;

exports[`Testes de Snapshot renderUserCard deve renderizar com valores padrão quando alguns campos estão ausentes 1`] = `
"
    <div class="user-card active">
      <div class="user-card__avatar">
        <img src="/images/default-avatar.png" alt="Maria Santos">
      </div>
      <div class="user-card__info">
        <h3 class="user-card__name">Maria Santos</h3>
        <p class="user-card__email">maria@exemplo.com</p>
        <span class="user-card__role">Usuário</span>
      </div>
      <div class="user-card__status">
        <span class="status-badge status-badge--active">Ativo</span>
      </div>
    </div>
  "
`;

exports[`Testes de Snapshot renderUserCard deve renderizar corretamente com dados completos 1`] = `
"
    <div class="user-card active">
      <div class="user-card__avatar">
        <img src="/images/avatar-1.jpg" alt="João Silva">
      </div>
      <div class="user-card__info">
        <h3 class="user-card__name">João Silva</h3>
        <p class="user-card__email">joao@exemplo.com</p>
        <span class="user-card__role">Administrador</span>
      </div>
      <div class="user-card__status">
        <span class="status-badge status-badge--active">Ativo</span>
      </div>
    </div>
  "
`;

exports[`Testes de Snapshot renderUserCard deve renderizar mensagem de erro para dados inválidos: usuário como string 1`] = `"<div class="error">Dados de usuário inválidos</div>"`;

exports[`Testes de Snapshot renderUserCard deve renderizar mensagem de erro para dados inválidos: usuário indefinido 1`] = `"<div class="error">Dados de usuário inválidos</div>"`;

exports[`Testes de Snapshot renderUserCard deve renderizar mensagem de erro para dados inválidos: usuário nulo 1`] = `"<div class="error">Dados de usuário inválidos</div>"`;

exports[`Testes de Snapshot renderUserCard deve renderizar usuário inativo 1`] = `
"
    <div class="user-card inactive">
      <div class="user-card__avatar">
        <img src="/images/default-avatar.png" alt="Carlos Oliveira">
      </div>
      <div class="user-card__info">
        <h3 class="user-card__name">Carlos Oliveira</h3>
        <p class="user-card__email">carlos@exemplo.com</p>
        <span class="user-card__role">Usuário</span>
      </div>
      <div class="user-card__status">
        <span class="status-badge status-badge--inactive">Inativo</span>
      </div>
    </div>
  "
`;
